heimdall-ingress-uat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall-ingress-prod
spec:
  rules:
  - host: heimdall.uat.kube.terabits.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: heimdall
            port: 
              number: 80
