heimdall-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"  
spec:
  rules:
  - host: heimdall.kube.uat.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: heimdall
            port: 
              number: 80
