nginx-ingress-issued-cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    app: test
  namespace: default
spec:
  tls:
    - secretName: nginx-kube-uat-io-mzrpd
      hosts:
        - nginx.kube.uat.io
  rules:
  - host: nginx.kube.uat.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              number: 80
