nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    app: test
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"  
  namespace: default
spec:
  # tls:
  #   - secretName: kube-uat-tls
  #     hosts:
  #       - nginx.kube.uat.io
  rules:
  - host: nginx.kube.uat.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              number: 80
