traefik-nginx-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-tls
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`nginx.kube.uat.io`)
    kind: Rule
    services:
      - name: nginx
        port: 80
  tls:
    certResolver: myresolver
