traefik-simple.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  labels:
    app: traefiklabs
    name: whoami

spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefiklabs
      task: whoami
  template:
    metadata:
      labels:
        app: traefiklabs
        task: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: traefiklabs
    task: whoami
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: myingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: http

spec:
  rules:
    - host: whoami.uat.kube.terabits.io
      http:
        paths:
          - path: /bar
            pathType: ImplementationSpecific
            backend:
              service:
                name: whoami
                port:
                  number: 80
          - path: /foo
            pathType: ImplementationSpecific
            backend:
              service:
                name: whoami
                port: 
                  number: 80
